--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,18 @@
 ###############################################################################
 * text=auto
 
+*.txt           text eol=lf
+*.xaml          text eol=lf
+*.resw          text eol=lf
+*.cpp           text eol=lf
+*.h             text eol=lf
+*.hpp           text eol=lf
+*.idl           text eol=lf
+*.md            text eol=lf
+*.appxmanifest  text eol=lf
+*.props         text eol=lf
+*.proto         text eol=lf
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
@@ -22,27 +34,30 @@
 # these files as binary and thus will always conflict and require user
 # intervention with every merge. To do so, just uncomment the entries below
 ###############################################################################
-#*.sln       merge=binary
-#*.csproj    merge=binary
-#*.vbproj    merge=binary
-#*.vcxproj   merge=binary
-#*.vcproj    merge=binary
-#*.dbproj    merge=binary
-#*.fsproj    merge=binary
-#*.lsproj    merge=binary
-#*.wixproj   merge=binary
-#*.modelproj merge=binary
-#*.sqlproj   merge=binary
-#*.wwaproj   merge=binary
+*.sln       merge=binary
+*.csproj    merge=binary
+*.vbproj    merge=binary
+*.vcxproj   merge=binary
+*.vcproj    merge=binary
+*.dbproj    merge=binary
+*.fsproj    merge=binary
+*.lsproj    merge=binary
+*.wixproj   merge=binary
+*.modelproj merge=binary
+*.sqlproj   merge=binary
+*.wwaproj   merge=binary
 
 ###############################################################################
 # behavior for image files
 #
 # image files are treated as binary by default.
 ###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
+*.jpg   binary
+*.png   binary
+*.gif   binary
+
+# Font files
+*.ttf   binary
 
 ###############################################################################
 # diff behavior for common document formats
